--- a/src/app/components/carga/carga.component.html
+++ b/src/app/components/carga/carga.component.html
@@ -1,4 +1,4 @@
-<ion-slides pager="ios" class="slide-full" *ngIf="!mostrar" [options]="slideOpts">
+<ion-slides pager="ios" class="slide-full"  [options]="slideOpts">
   <ion-slide>
   
    <ion-card mode="ios">
