--- a/src/app/pages/carta/carta.page.html
+++ b/src/app/pages/carta/carta.page.html
@@ -1,4 +1,4 @@
-<ion-content color="mycolor2" class="ion-padding">
+<!--<ion-content color="mycolor2" class="ion-padding">
   <ion-slides pager="ios" class="slide-full"  [options]="slideOpts">
     <ion-slide>
 
@@ -16,3 +16,4 @@
   </ion-slides>
 
 </ion-content>
+-->
