--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -5,7 +5,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="mycolor2">  <ion-slides pager="ios" class="slide-full" *ngIf="!ocultarSlider && !final">
+<ion-content color="mycolor2">  <ion-slides pager="ios" class="slide-full">
   <ion-button class="info" slot="icon-only" >
     <ion-icon slot="start" name="information-circle"></ion-icon>
   </ion-button>
