--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -28,7 +28,7 @@
   </ion-row>
 </ion-grid>
   <button expand="block" class="btn-3d" (click)="agregarJugador()" text-center>Añadir Jugador</button>
-
+<h1 style="text-align: center;">{{mensaje}}</h1>
 <ion-list color="mycolor2" class="ion-no-border" class="ion-no-padding">
   <ion-list-header text-center color="mycolor2"> 
     <ion-label color="texto" style="text-align: center;"><h1 >Jugadores</h1></ion-label>
