--- a/src/app/pages/circulo/circulo.page.html
+++ b/src/app/pages/circulo/circulo.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/inicio" color="texto"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-capitalize"><label>Inicio</label></ion-title>
+    <ion-title class="ion-text-capitalize"><label>Circulo ¿Te Atreves?</label></ion-title>
     <ion-button slot="end" (click)="modal()" fill="clear">
       <ion-icon color="texto" slot="icon-only" name="information-circle-outline"></ion-icon>
     </ion-button>
