--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,16 +2,16 @@
   <ion-menu menuId='menu-main' class="ion-no-border" class="ion-no-padding" content-id='main'>
     <ion-header>
       <ion-toolbar color="mycolor" class="ion-no-border" class="ion-no-padding">
-        <ion-title color="texto">Barbados 1569</ion-title>
+        <ion-title color="texto">¿Te Atreves?</ion-title>
       </ion-toolbar>
     </ion-header>
 
     <ion-content color="mycolor2" class="ion-no-border" class="ion-no-padding" no-bounce>
       <ion-img style="width: 95%; margin-left: auto; margin-right: auto;" src="/assets/img/barbados1569.png"></ion-img>
       <!-- SnapWidget -->
-      <iframe src="https://snapwidget.com/embed/923719" class="snapwidget-widget" allowtransparency="true"
+      <!-- <iframe src="https://snapwidget.com/embed/923719" class="snapwidget-widget" allowtransparency="true"
         frameborder="0" scrolling="no"
-        style="border:none; overflow:hidden;  width:100%; height:110%;"></iframe>
+        style="border:none; overflow:hidden;  width:100%; height:110%;"></iframe> -->
 
     </ion-content>
     <ion-list class="ion-no-border" class="ion-no-padding">
