--- a/src/app/pages/carta/carta.page.html
+++ b/src/app/pages/carta/carta.page.html
@@ -4,7 +4,7 @@
 
        <ion-img [src]="imagen"></ion-img>
       
-       <ion-card-content style="padding-left: 20%; padding-right: 20%;">
+       <ion-card-content style="padding-left: 20%; padding-right: 20%; text-align: justify;">
       <label class="pregunta"><h2 style="font-weight: bold;">{{mensaje}}</h2></label>
        </ion-card-content>
    
