--- a/src/app/pages/circulo/circulo.page.scss
+++ b/src/app/pages/circulo/circulo.page.scss
@@ -1,3 +1,8 @@
+.contenedor-img{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
 .circle-container { 
     top:20%;
     position: relative; 
