--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button menu="menu-main" color="texto"></ion-menu-button>
     </ion-buttons>
-    <ion-title color="texto">Barbados 1569</ion-title>
+    <ion-title color="texto">¿Te Atreves?</ion-title>
   </ion-toolbar>
 </ion-header>
 
